# LABAS-Software

./: README.md  SOLO Produtores 12-08-2025.xlsx  copilot.md  package-lock.json  package.json  ~$SOLO Produtores 12-08-2025.xlsx
backend/: .gitignore  README.md  pyproject.toml  testar_quimica_b.py  testar_quimica_ca.py  testar_quimica_cu.py  testar_quimica_fe.py  testar_quimica_mg.py  testar_quimica_mn.py  testar_quimica_p_mehlich.py  testar_quimica_p_resina.py  testar_quimica_s.py  testar_quimica_zn.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/setup/: settings.py
backend/src/application/: constants.py  use_cases.py
backend/src/application/equipamentos/: absorcao_atomica.py  core_matematico.py  espectrofotometro.py  fotometro_chama.py  phmetro.py  titulacao.py
backend/src/application/services/: email_service.py
backend/src/infrastructure/database/: admin.py  apps.py  models.py  signals.py
backend/src/infrastructure/database/migrations/: 0001_initial.py  0004_bateriacalibracao_leituraequipamento.py  (+18 more)
backend/src/infrastructure/web/: permissions.py  serializers.py  urls.py  views.py
backend/static/css/: laudo_estilo.css
backend/templates/laudos/: modelo_oficial.html
backend/test/: testar_phmetro.py  testar_quimica_b.py  testar_quimica_ca.py  testar_quimica_cu.py  testar_quimica_fe.py  testar_quimica_k.py  testar_quimica_mg.py  testar_quimica_mn.py  testar_quimica_mo.py  testar_quimica_na.py  testar_quimica_p_mehlich.py  testar_quimica_p_rem.py  testar_quimica_p_resina.py  testar_quimica_s.py  testar_quimica_zn.py  testar_titulacao.py
(+113 files in other folders)
