[project]
name = "analise-solo-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Azevedo",email = "g.azevedo0121@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (<6.0)",
    "python-decouple (>=3.8,<4.0)",
    "weasyprint (>=68.1,<69.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
isort = "^7.0.0"
taskipy = "^1.14.1"
pytest = "^9.0.2"

